--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33"
+    "mongodb": "^3.0.2",
+    "mongoose": "^5.0.3"
   },
   "devDependencies": {
     "mocha": "^5.0.0"
